fix controls alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,7 @@ h1 {
 }
 
 #timer {
-  border: 1px solid;
+  border: 1px solid black;
   border-radius: 15px;
   background-color: black;
   width: 40%;
@@ -37,8 +37,10 @@ h1 {
 }
 
 #controls {
+  width: 40%;
+  height: 100px;
+  margin: auto;
   font-size: 3rem;
-  margin: 1rem;
   display: grid;
   place-items: center;
   grid-template-columns: 1fr 1fr;
